--- a/Resueltos/Guia1_9-22.md
+++ b/Resueltos/Guia1_9-22.md
@@ -178,40 +178,44 @@ min Σ<sub>i ∈ {1, 2, 3}</sub> T<sub>i</sub>
 
 ## Ejercicio 16 - Festival de musica
 ## caso 1 
-- Hay 21 franjas horarias(3 dias 7 franjas cada una) y 4 escenarios por lo que pueden tocar a lo sumo 4 bandas en cada franja. 
-- i E {B} B = conjunto de bandas deben tocar exactamente una vez si es invitada. 
-- e_i = cantidad de espectadores que atraera la banda i. 
-- r_i = ganancia neta en pesos. 
-- G_k = conjunto de las bandas de Genero k. G_k interseccion G_r = vacio si k != r (k E {1..5})
-- l_j = capacidad del escenario E_j 
+- Hay 21 franjas horarias (3 días 7 franjas cada una) y 4 escenarios por lo que pueden tocar a lo sumo 4 bandas en cada franja. 
+- i ∈ {B} B = conjunto de bandas deben tocar exactamente una vez si es invitada. 
+- eᵢ = cantidad de espectadores que atraerá la banda i. 
+- rᵢ = ganancia neta en pesos. 
+- Gₖ = conjunto de las bandas de Género k. Gₖ ∩ Gᵣ = vacío si k ≠ r (k ∈ {1..5})
+- lⱼ = capacidad del escenario Eⱼ 
 - la cantidad de espectadores no debe superar los 2000 en cada franja
-- se deben invitar al menos g_k bandas de genero G_k. 
-- el escenario 4 debe permanecer vacio durante la primer franja horaria cada dia 
-- las bandas en el conjunto P deben ser invitadas si o si.
-- cada banda del conjunto P tiene que tocar durante alguna de las ultimas 2 franjas horarios de cualquier dia. 
+- se deben invitar al menos gₖ bandas de genero Gₖ. 
+- el escenario 4 debe permanecer vacío durante la primer franja horaria cada día 
+- las bandas en el conjunto P deben ser invitadas sí o sí.
+- cada banda del conjunto P tiene que tocar durante alguna de las últimas 2 franjas horarias de cualquier día. 
 - la ganancia neta debe superar los R pesos.
 - las bandas invitadas con menos de S espectadores deben tocar durante las primeras 3 franjas horarias. 
  
 ### Modelo de Programación Lineal
 
 **Variables:**
-X_d_f_i_j = Binaria 1 si en el dia d, franja f si la banda i toca en el escenario j 0 sino.
-W_i = Binaria 1 si la banda i es invitada 0 sino. 
+X<sub>d,f,i,j</sub> = Binaria 1 si en el día d, franja f la banda i toca en el escenario j, 0 sino.
+Wᵢ = Binaria 1 si la banda i es invitada, 0 sino. 
+Bᵢ = variable Binaria auxiliar. 
 
 **Función Objetivo:**
 
 **Restricciones:**
-- forall (d,f,j) en {1..3} x {1..7} x {1..4} : sum i en {B} X_d_f_i_j <= 1.
-- forall i en {B} : sum (d,f,j) en {1..3} x {1..7} x {1..4} X_d_f_i_j = W_i
-- forall (d,f,j) en {1..3} x {1..7} x {1..4} : sum i en {B} X_d_f_i_j * e_i <= l_j
-- forall (d,f) en {1..3} x {1..7} : sum i en {B} sum j en {1..4} X_d_f_i_j * e_i <= 2000 
-- forall k en {1..5} : sum i en {G_k}: W_i >= g_k
-- forall d en {1..3} : sum i en {B} X_d_1_i_4 = 0
-- forall i en {P} : W_i = 1 
-- forall i en {P} : sum (d,f,j) en {1..3} x {6,7} x {1..4} X_d_f_i_j = W_i
-- sum i en {B} : r_i >= R
-- 
-
+- ∀ (d,f,j) ∈ {1..3} x {1..7} x {1..4} : ∑ᵢ ∈ {B} X<sub>d,f,i,j</sub> ≤ 1
+- ∀ i ∈ {B} : ∑₍d,f,j₎ ∈ {1..3} x {1..7} x {1..4} X<sub>d,f,i,j</sub> = Wᵢ
+- ∀ (d,f,j) ∈ {1..3} x {1..7} x {1..4} : ∑ᵢ ∈ {B} X<sub>d,f,i,j</sub> * eᵢ ≤ lⱼ
+- ∀ (d,f) ∈ {1..3} x {1..7} : ∑ᵢ ∈ {B} ∑ⱼ ∈ {1..4} X<sub>d,f,i,j</sub> * eᵢ ≤ 2000 
+- ∀ k ∈ {1..5} : ∑ᵢ ∈ {Gₖ} Wᵢ ≥ gₖ
+- ∀ d ∈ {1..3} : ∑ᵢ ∈ {B} X<sub>d,1,i,4</sub> = 0
+- ∀ i ∈ {P} : ∑₍d,f,j₎ ∈ {1..3} x {6,7} x {1..4} X<sub>d,f,i,j</sub> = 1
+- ∑ᵢ ∈ {B} : Wᵢ * rᵢ ≥ R
+- ∀ (d,f,j) ∈ {1..3} x {3..7} x {1..4} : X<sub>d,f,i,j</sub> ≤ eᵢ - S + 1 + S * Bᵢ  y  X₍d,f,i,j₎ ≤ 0 + S * (Bᵢ - 1)
+  (caso i no invitada -> X₍d,f,i,j₎ = 0 y cumple con Bᵢ = 1)
+  (caso i invitada con eᵢ < S --> Bᵢ = 1 y X₍d,f,i,j₎ ≤ eᵢ - S + 1 + S * Bᵢ y X₍d,f,i,j₎ ≤ 0) 
+  X₍d,f,i,j₎ ≤ 0 todas las franjas que no son las primeras 2 son 0 como quería.
+  (caso i invitada con eᵢ ≥ S --> puedo tomar Bᵢ = 0 y X₍d,f,i,j₎ ≤ eᵢ - S + 1 y X₍d,f,i,j₎ ≤ S) 
+  X₍d,f,i,j₎ ≤ 1 como quería.
 
 
 
