--- a/Resueltos/Guia1_9-22.md
+++ b/Resueltos/Guia1_9-22.md
@@ -177,7 +177,6 @@ min Σ<sub>i ∈ {1, 2, 3}</sub> T<sub>i</sub>
 - T<sub>3</sub> ≥ -z
 
 ## Ejercicio 16 - Festival de musica
-## caso 1 
 - Hay 21 franjas horarias (3 días 7 franjas cada una) y 4 escenarios por lo que pueden tocar a lo sumo 4 bandas en cada franja. 
 - i ∈ {B} B = conjunto de bandas deben tocar exactamente una vez si es invitada. 
 - eᵢ = cantidad de espectadores que atraerá la banda i. 
@@ -199,7 +198,23 @@ X<sub>d,f,i,j</sub> = Binaria 1 si en el día d, franja f la banda i toca en el 
 Wᵢ = Binaria 1 si la banda i es invitada, 0 sino. 
 Bᵢ = variable Binaria auxiliar. 
 
-**Función Objetivo:**
+**Función Objetivo:** (condiciones en 2)
+
+**a)** Maximizar Z (con z entera)
+- **Restricción:** ∀ d ∈ {1..3} : z ≤ ∑₍f,i,j₎ ∈ {1..7} x {B} x {1..4} X<sub>d,f,i,j</sub> * eᵢ
+
+**b)** Minimizar Z: (con Z entera)
+- **Restricción:** ∀ (d,f) ∈ {1..3} x {1..7} : Z ≥ ∑₍i,j₎ ∈ {B} x {1..4} X<sub>d,f,i,j</sub> * eᵢ
+
+**c)** 
+- **Variables extra:** T<sub>v</sub> = variable auxiliar entera.
+- **Función Objetivo:** Minimizar ∑<sub>v</sub> ∈ {1..4} x {2..5} T<sub>v</sub>
+
+- **Restricciones:**
+∀ v = (k,r) ∈ {1..4} x {k+1..5} :
+- T<sub>v</sub> ≥ (∑ᵢ ∈ {Gₖ} Wᵢ) - (∑ⱼ ∈ {Gᵣ} Wⱼ)
+- T<sub>v</sub> ≥ (∑ⱼ ∈ {Gᵣ} Wⱼ) - (∑ᵢ ∈ {Gₖ} Wᵢ) 
+
 
 **Restricciones:**
 - ∀ (d,f,j) ∈ {1..3} x {1..7} x {1..4} : ∑ᵢ ∈ {B} X<sub>d,f,i,j</sub> ≤ 1
@@ -211,11 +226,14 @@ Bᵢ = variable Binaria auxiliar.
 - ∀ i ∈ {P} : ∑₍d,f,j₎ ∈ {1..3} x {6,7} x {1..4} X<sub>d,f,i,j</sub> = 1
 - ∑ᵢ ∈ {B} : Wᵢ * rᵢ ≥ R
 - ∀ (d,f,j) ∈ {1..3} x {3..7} x {1..4} : X<sub>d,f,i,j</sub> ≤ eᵢ - S + 1 + S * Bᵢ  y  X₍d,f,i,j₎ ≤ 0 + S * (Bᵢ - 1)
-  (caso i no invitada -> X₍d,f,i,j₎ = 0 y cumple con Bᵢ = 1)
-  (caso i invitada con eᵢ < S --> Bᵢ = 1 y X₍d,f,i,j₎ ≤ eᵢ - S + 1 + S * Bᵢ y X₍d,f,i,j₎ ≤ 0) 
-  X₍d,f,i,j₎ ≤ 0 todas las franjas que no son las primeras 2 son 0 como quería.
-  (caso i invitada con eᵢ ≥ S --> puedo tomar Bᵢ = 0 y X₍d,f,i,j₎ ≤ eᵢ - S + 1 y X₍d,f,i,j₎ ≤ S) 
-  X₍d,f,i,j₎ ≤ 1 como quería.
+
+(caso i no invitada -> X₍d,f,i,j₎ = 0 y cumple con Bᵢ = 1)
+  
+(caso i invitada con eᵢ < S --> Bᵢ = 1 y X₍d,f,i,j₎ ≤ eᵢ - S + 1 + S * Bᵢ y X₍d,f,i,j₎ ≤ 0) 
+X₍d,f,i,j₎ ≤ 0 todas las franjas que no son las primeras 2 son 0 como quería.
+
+(caso i invitada con eᵢ ≥ S --> puedo tomar Bᵢ = 0 y X₍d,f,i,j₎ ≤ eᵢ - S + 1 y X₍d,f,i,j₎ ≤ S) 
+X₍d,f,i,j₎ ≤ 1 como quería.
 
 
 
