--- a/Resueltos/Guia1_9-22.md
+++ b/Resueltos/Guia1_9-22.md
@@ -83,18 +83,21 @@ tablero de ajedrez de (n x n) y el rey esta en (s,t) y necesita llegar a (u,v) a
 E = conjunto de casilleros ocupados por piezas enemigas(el rey no tiene que pasar por estos)
 **Variables:**
 
-x_i_j = {si el camino del rey pasa por la casilla (i,j) 0 si no} 
+x_i_j_k_l = { 1 si el rey ejecuta el movimiento de (i,j) a (k,l) 0 si no } 
 
 ### Función Objetivo 
 
-Minimizar: sum (i,j) en {1..n}x{1..n} x_i_j 
+Minimizar: sum (i,j,k,l) en {1..n}x{1..n}x{1..n}x{1..n} x_i_j_k_k 
 
 **Restricciones:**
-- for all (i,j) en {E}: x_i_j = 0; 
-- X_s_t = 1 y X_u_v = 1
-forall (i,j) / (u,v) y (s,t)
-8*x_i_j >= x_i+1_j + x_i_j+1 + x_i-1_j + x_i_j-1 + x_i+1_j+1 + x_i+1_j-1 + x_i-1_j+1 + x_i-1_j-1
-si una casilla es 1 al menos alguna de las cercanas es 1.
+- for all (k,l) en {E}: sum (i,j) en {1..n}x{1..n} X_i_j_k_l = 0;
+- sum (k,l) en {1..n}x{1..n} con (k,l) != (s,t): X_s,t_k,l >= 1;
+- sum (i,j) en {1..n}x{1..n} con (k,l) != (u,v): X_i,j_u,v >= 1;   
+
+// me falta poner que sea un camino idea poner que para todo x=1 menos el inicial haya uno que termine ahi y otro que nazca. 
+forall (i,j,k,l) en {1..n}x{1..n}x{1..n}x{1..n} / (u,v) y (s,t)
+
+
 
 ## Ejercicio 13 - Compañía de Construcción
 
