Update and rename Guia1_9-22.md to Guia1_9-20.md

--- a/Resueltos/Guia1_9-20.md
+++ b/Resueltos/Guia1_9-20.md
@@ -90,14 +90,16 @@ x_i_j_k_l = { 1 si el rey ejecuta el movimiento de (i,j) a (k,l) 0 si no }
 Minimizar: sum (i,j,k,l) en {1..n}x{1..n}x{1..n}x{1..n} x_i_j_k_k 
 
 **Restricciones:**
-- for all (k,l) en {E}: sum (i,j) en {1..n}x{1..n} X_i_j_k_l = 0;
-- sum (k,l) en {1..n}x{1..n} con (k,l) != (s,t): X_s,t_k,l >= 1;
-- sum (i,j) en {1..n}x{1..n} con (k,l) != (u,v): X_i,j_u,v >= 1;   
+- for all (k,l) en {E}: sum (i,j) en {1..n}x{1..n} X_i_j_k_l = 0; (no se realiza ningun movimiento hacia las casillas ocupadas )
+- sum (k,l) en {1..n}x{1..n} con (k,l) != (s,t): X_s,t_k,l >= 1; (existe al menos 1 movimiento desde (s,t) --> (k,l) )
+- sum (i,j) en {1..n}x{1..n} con (k,l) != (u,v): X_i,j_u,v >= 1;  (existe al menos un movimiento hacia (u,v)) 
 
-// me falta poner que sea un camino idea poner que para todo x=1 menos el inicial haya uno que termine ahi y otro que nazca. 
-forall (i,j,k,l) en {1..n}x{1..n}x{1..n}x{1..n} / (u,v) y (s,t)
+para todo (i,j,k,l) en {1..n}x{1..n}x{1..n}x{1..n} tal que Dinf((i,j),(k,l)) >= 2  
+X_i,j_k,l = 0 ; (solo puede moverse a un casillero adyacente)
 
-
+forall (k,l) en {1..n}x{1..n} / (s,t) (para cada casilla (k,l) en el tablero que no sea la ultima)
+sum (i,j) en {1..n}x{1..n} X_i,j_k,l <= sum (i,j) en {1..n}x{1..n} / (k,l) X_k,l_i,j 
+(si existe al menos un movimiento hacia ella tiene que tener un movimiento hacia otra casilla que no sea ella misma)
 
 ## Ejercicio 13 - Compañía de Construcción
 
