--- a/Resueltos/Guia1_9-20.md
+++ b/Resueltos/Guia1_9-20.md
@@ -240,11 +240,27 @@ X₍d,f,i,j₎ ≤ 0 todas las franjas que no son las primeras 2 son 0 como quer
 (caso i invitada con eᵢ ≥ S --> puedo tomar Bᵢ = 0 y X₍d,f,i,j₎ ≤ eᵢ - S + 1 y X₍d,f,i,j₎ ≤ S) 
 X₍d,f,i,j₎ ≤ 1 como quería.
 
+## Ejercicio 17 - Compañias mineras
 
+### Modelo de Programación Lineal
 
+**Variables:**
+I = {1..4}
+J = {1..5}
+- X_i_j = {1 si la mina i sera explotada el año j 0 si no}
+- T_i = varible entera auxiliar 
+  
+**Función Objetivo:**
+- Maximizar: Sum (i,j) en {I*J} (X_i_j * L_i * IC_i) * 10 - T_i * R_i - CA 
 
+(L_i millones de toneladas y 10 millones de dolares por tonelada)
+(consultar lo de las mezclas no entendi)
 
-
+**Restricciones:**
+- forall j en {J} : sum i en {I} X_i_j <= 3 ; 
+- forall i en {I} for all j en {J}: T_i >= i*x_i_j ;
+- 
+- 
 
 
 
