--- a/Resueltos/Guia1_9-20.md
+++ b/Resueltos/Guia1_9-20.md
@@ -248,19 +248,44 @@ X₍d,f,i,j₎ ≤ 1 como quería.
 I = {1..4}
 J = {1..5}
 - X_i_j = {1 si la mina i sera explotada el año j 0 si no}
+- IA = natural (indicar ambiental) 
 - T_i = varible entera auxiliar 
-  
+- CA = natural (total a pagar por la contaminacion )
+- δ_s: indica si IA pertenece al segmento s (1 ≤ s ≤ 3, una por cada segmento)
+- λ_k = con 1 ≤ k ≤ 6. Son los coeficientes de la combinación lineal entre los extremos del intervalo correspondiente.
+
 **Función Objetivo:**
-- Maximizar: Sum (i,j) en {I*J} (X_i_j * L_i * IC_i) * 10 - T_i * R_i - CA 
+- Maximizar: Sum (i,j) en {I*J} (X_i_j * L_i * IC_i) * 10 * 1.000.000 - T_i * R_i - CA 
 
 (L_i millones de toneladas y 10 millones de dolares por tonelada)
 (consultar lo de las mezclas no entendi)
 
 **Restricciones:**
 - forall j en {J} : sum i en {I} X_i_j <= 3 ; 
-- forall i en {I} for all j en {J}: T_i >= i*x_i_j ;
-- 
-- 
+- forall i en {I} for all j en {J}: T_i >= i * X_i_j ;
+- IA >= (sum (i,j) en {I*J} X_i_j * L_i) * 2/3  ;
+- sum s en {1..3}: δ_s = 1 ; 
+- forall s en {1..3} δ_s = λ_(2s-1)  + λ_(2s) ; 
+- IA = λ_2 * 2 + λ_3*2 + λ_4*4 + λ_5*4 + λ_6 * 5 ; 
+- CA = λ_2 * 2 + λ_3*7 + λ_4*13 + λ_5*27 + λ_6 * 32 ;
+- forall k en {1..6} =  λ_k >= 0;
+- λ_3 - ε  >= 0
+- λ_5 - ε  >= 0 
+
+(consultar algun criterio para decidir el valor de ε, la suposicion que se extrae toda la capacidad de la mina es correcta?)
+
+## Ejercicio 18 - Congreso Internacional 
+
+### Modelo de Programación Lineal
+
+**Variables:**
+
+
+**Función Objetivo:**
+
+**Restricciones:**
+
+
 
 
 
