--- a/Resueltos/Guia1_9-20.md
+++ b/Resueltos/Guia1_9-20.md
@@ -279,15 +279,26 @@ J = {1..5}
 ### Modelo de Programación Lineal
 
 **Variables:**
-
+I = {1..n} 
+J = {1..h}
+X_i_j = {1 si la persona i tiene asignada la habitacion  j 0 sino }
 
 **Función Objetivo:**
+**A**  f.o : W_j = 1 si la habitacion j es usada 0 sino
+       var : minimizar: sum j en {J} W_j
+       res : forall j en {J} W_j <= sum i en {I} X_i_j <= W_j * C_j
 
+**C**  f.o : Y_g,j = variable auxiliar binaria. ( 1 si el grupo g esta completo en la habitacion j 0 sino )
+       var : maximizar : sum g en {G} sum j en {J} Y_g,j ;
+       res : forall g en {G} sum j en {J} : Y_g,j * (sum i en {g} 1 ) <= sum i en G X_i_j  y sum (i en {g} x_i_j - 1) + 1 <= Y_g,j
+
+(asumi grupo completo asignado a la misma habitacion )
 **Restricciones:**
-
-
-
-
+- forall i en {I} : sum j en {J} X_i_j = 1; 
+- forall j en {J} : sum i en {I} X_i_j <= C_j;
+- forall j en {J} : forall (k,l) en {Argentina * Brasil} = X_k_j + X_l_j <= 1;
+- forall j en {J} : = sum i en { tema_r } X_i_j <= 2 ;
+- forall i en {I} : ( a_i - 49 ) * 3   <= sum j en {J} X_i_j * e_j ;
 
 
 
