--- a/Resueltos/Guia1_9-20.md
+++ b/Resueltos/Guia1_9-20.md
@@ -274,31 +274,35 @@ J = {1..5}
 
 (consultar algun criterio para decidir el valor de ε, la suposicion que se extrae toda la capacidad de la mina es correcta?)
 
-## Ejercicio 18 - Congreso Internacional 
+## Ejercicio 18 - Congreso Internacional
 
 ### Modelo de Programación Lineal
 
 **Variables:**
-I = {1..n} 
-J = {1..h}
-X_i_j = {1 si la persona i tiene asignada la habitacion  j 0 sino }
+- I = {1..n}
+- J = {1..h}
+- X<sub>i_j</sub> = 1 si la persona i tiene asignada la habitación j, 0 sino
 
-**Función Objetivo:**
-**A**  f.o : W_j = 1 si la habitacion j es usada 0 sino
-       var : minimizar: sum j en {J} W_j
-       res : forall j en {J} W_j <= sum i en {I} X_i_j <= W_j * C_j
+**Función Objetivo A:**
+- **f.o:** W<sub>j</sub> = 1 si la habitación j es usada, 0 sino
+- **var:** Minimizar: Σ<sub>j∈J</sub> W<sub>j</sub>
+- **res:** Para todo j∈J: W<sub>j</sub> ≤ Σ<sub>i∈I</sub> X<sub>i_j</sub> ≤ W<sub>j</sub> * C<sub>j</sub>
 
-**C**  f.o : Y_g,j = variable auxiliar binaria. ( 1 si el grupo g esta completo en la habitacion j 0 sino )
-       var : maximizar : sum g en {G} sum j en {J} Y_g,j ;
-       res : forall g en {G} sum j en {J} : Y_g,j * (sum i en {g} 1 ) <= sum i en G X_i_j  y sum (i en {g} x_i_j - 1) + 1 <= Y_g,j
+**Función Objetivo C:**
+- **f.o:** Y<sub>g,j</sub> es una variable auxiliar binaria (1 si el grupo g está completo en la habitación j, 0 sino)
+- **var:** Maximizar: Σ<sub>g∈G</sub> Σ<sub>j∈J</sub> Y<sub>g,j</sub>
+- **res:** Para todo g∈G y j∈J: Y<sub>g,j</sub> * (Σ<sub>i∈g</sub> 1) ≤ Σ<sub>i∈G</sub> X<sub>i_j</sub> y Σ<sub>i∈g</sub> X<sub>i_j</sub> - 1 + 1 ≤ Y<sub>g,j</sub>
 
-(asumi grupo completo asignado a la misma habitacion )
+(asumiendo grupo completo asignado a la misma habitación)
+
 **Restricciones:**
-- forall i en {I} : sum j en {J} X_i_j = 1; 
-- forall j en {J} : sum i en {I} X_i_j <= C_j;
-- forall j en {J} : forall (k,l) en {Argentina * Brasil} = X_k_j + X_l_j <= 1;
-- forall j en {J} : = sum i en { tema_r } X_i_j <= 2 ;
-- forall i en {I} : ( a_i - 49 ) * 3   <= sum j en {J} X_i_j * e_j ;
+- Para todo i∈I: Σ<sub>j∈J</sub> X<sub>i_j</sub> = 1
+- Para todo j∈J: Σ<sub>i∈I</sub> X<sub>i_j</sub> ≤ C<sub>j</sub>
+- Para todo j∈J y (k,l)∈{Argentina × Brasil}: X<sub>k_j</sub> + X<sub>l_j</sub> ≤ 1
+- Para todo j∈J: Σ<sub>i∈tema_r</sub> X<sub>i_j</sub> ≤ 2
+- Para todo i∈I: (a<sub>i</sub> - 49) * 3 ≤ Σ<sub>j∈J</sub> X<sub>i_j</sub> * e<sub>j</sub>
+
+
 
 
 
