--- a/Resueltos/Guia1_9-20.md
+++ b/Resueltos/Guia1_9-20.md
@@ -302,9 +302,43 @@ J = {1..5}
 - Para todo j∈J: Σ<sub>i∈tema_r</sub> X<sub>i_j</sub> ≤ 2
 - Para todo i∈I: (a<sub>i</sub> - 49) * 3 ≤ Σ<sub>j∈J</sub> X<sub>i_j</sub> * e<sub>j</sub>
 
+## Ejercicio 19 - Empresa Forestal 
+
+### Modelo de Programación Lineal
+
+**Variables:**
+- I = {1..N}
+- J = {1..J}
+- T = {1..T}
+- X<sub>i,j,t</sub> = 1 si plante arbol tipo j del area i en el mes t;
+- W<sub>i,t</sub> = 1 si talo la madera de la seccion i en el mes t;
+- Cam_t = entero cantidad de camiones utilizados en el mes t. 
+(supongo que si se planta en un area se planta en toda la superficie)
+
+
+**Función Objetivo**
+- maximizar : sum (i,j,t) en {N*J*T} X<sub>i,j,t</sub> * (v<sub>i,j</sub> *g<sub>j</sub> - k<sub>i,j</sub> - Cam_t * f_i,j  )
+- 
+**Restricciones:**
+- forall i en {N} : sum (j,t) en {J*T}: X<sub>i,j,t</sub> <= 1 ;  (en cada seccion se puede plantar a lo sumo 1 tipo de arbol y 1 vez )
+- forall i en {N} : sum t en {T}: W<sub>i,t</sub> <= 1 ; (cada region se puede talar a lo sumo 1 vez)
+- forall i en {N} : sum t en {T}: W<sub>i,t</sub> >= sum (j,t) en {J*T}: X<sub>i,j,t</sub> ; (si una region fue plantada tiene que ser talada en algun momento)
+- forall (i,j,t1) en {N*J*T} : sum t_2 en {t1..t1+m_j-1} W_i_t2 <= 1 - X<sub>i,j,t1</sub> ;   
+- forall t en {T} : sum (i,j) en {I*J} : X<sub>i,j,t</sub> * a<sub>i</sub> <= A<sub>t</sub>
+- forall t en {T} : Cam_t <= C_t, Cam_t >= 0;
+- forall t en {T} : sum (i,j) en {I*J} X_i,j,t * v_i,j  <= Cam_t * V
+- forall i en {S} : sum (j,t) en {J*{1..6}} X_i,j,t = 0 ;
+- forall (i,t) en {I*{1...11}} : X_i,4,t = 0;  
+ 
 
 
 
+
+
+
+
+
+ 
 
 
 
