--- a/Resueltos/Guia1_9-20.md
+++ b/Resueltos/Guia1_9-20.md
@@ -247,30 +247,30 @@ X₍d,f,i,j₎ ≤ 1 como quería.
 **Variables:**
 I = {1..4}
 J = {1..5}
+- Y_i_j = cantidad de toneladas extraidas de la mina i en el año j
 - X_i_j = {1 si la mina i sera explotada el año j 0 si no}
-- IA = natural (indicar ambiental) 
+- IA_j = real (indicar ambiental) en el año j 
 - T_i = varible entera auxiliar 
-- CA = natural (total a pagar por la contaminacion )
-- δ_s: indica si IA pertenece al segmento s (1 ≤ s ≤ 3, una por cada segmento)
-- λ_k = con 1 ≤ k ≤ 6. Son los coeficientes de la combinación lineal entre los extremos del intervalo correspondiente.
+- CA_j = natural (total a pagar por la contaminacion ) en el año j
+- δ_s_j: indica si IA pertenece al segmento s (1 ≤ s ≤ 3, una por cada segmento)
+- λ_k_j = con 1 ≤ k ≤ 6. Son los coeficientes de la combinación lineal entre los extremos del intervalo correspondiente.
 
 **Función Objetivo:**
-- Maximizar: Sum (i,j) en {I*J} (X_i_j * L_i * IC_i) * 10 * 1.000.000 - T_i * R_i - CA 
-
-(L_i millones de toneladas y 10 millones de dolares por tonelada)
-(consultar lo de las mezclas no entendi)
+- Maximizar: Sum (i,j) en {I*J} Y_i_j * 10 - T_i * R_i - CA 
 
 **Restricciones:**
 - forall j en {J} : sum i en {I} X_i_j <= 3 ; 
-- forall i en {I} for all j en {J}: T_i >= i * X_i_j ;
-- IA >= (sum (i,j) en {I*J} X_i_j * L_i) * 2/3  ;
-- sum s en {1..3}: δ_s = 1 ; 
+- forall (i,j) en {I*J} : T_i >= j * X_i_j ;
+- forall (i,j) en {I*J} : X_i_j * ε <= Y_i_j <= X_i_j * L_i * 1.000.000
+- forall (j) en {J} : IA_j >= (sum (i) en {I} Y_i_j) * 2/3  ;
+- forall j en (j) : sum s en {1..3}: δ_s = 1 ; 
 - forall s en {1..3} δ_s = λ_(2s-1)  + λ_(2s) ; 
 - IA = λ_2 * 2 + λ_3*2 + λ_4*4 + λ_5*4 + λ_6 * 5 ; 
 - CA = λ_2 * 2 + λ_3*7 + λ_4*13 + λ_5*27 + λ_6 * 32 ;
 - forall k en {1..6} =  λ_k >= 0;
 - λ_3 - ε  >= 0
 - λ_5 - ε  >= 0 
+- forall j en {J} : sum i en {I}: Y_i_j * Pur_Min_i >= sum i en {I}: Y_i_j * Pur_pedi_j 
 
 (consultar algun criterio para decidir el valor de ε, la suposicion que se extrae toda la capacidad de la mina es correcta?)
 
