--- a/Resueltos/Guia1_9-20.md
+++ b/Resueltos/Guia1_9-20.md
@@ -323,7 +323,7 @@ J = {1..5}
 - forall i en {N} : sum (j,t) en {J*T}: X<sub>i,j,t</sub> <= 1 ;  (en cada seccion se puede plantar a lo sumo 1 tipo de arbol y 1 vez )
 - forall i en {N} : sum t en {T}: W<sub>i,t</sub> <= 1 ; (cada region se puede talar a lo sumo 1 vez)
 - forall i en {N} : sum t en {T}: W<sub>i,t</sub> >= sum (j,t) en {J*T}: X<sub>i,j,t</sub> ; (si una region fue plantada tiene que ser talada en algun momento)
-- forall (i,j,t1) en {N* J *T} : sum t_2 en {t1..t1+m_j-1} W_i_t2 <= 1 - X<sub>i,j,t1</sub> ;   
+- forall (i,j,t1) en {N* J *T} : sum t_2 en {1..t1+m_j-1} W_i_t2 <= 1 - X<sub>i,j,t1</sub> ;   
 - forall t en {T} : sum (i,j) en {I*J} : X<sub>i,j,t</sub> * a<sub>i</sub> <= A<sub>t</sub>
 - forall t en {T} : Cam_t <= C_t, Cam_t >= 0;
 - forall t en {T} : sum (i,j) en {I*J} X_i,j,t * v_i,j  <= Cam_t * V
